# flowiseSpamDashboard

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOY_DIGITALOCEAN.md  DEPLOY_DOCKER.md  DOCKER_QUICKSTART.md  FLOWISE_SETUP.md  Makefile  QUICK_DEPLOY.md  README.md  TROUBLESHOOTING.md  deploy.sh  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup_server.sh  test_endpoint.sh
backend/: .env.example  Dockerfile  main.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx
